fix: remove the table scrollbar when it's not n...
...eeded

--- a/antora-ui-camel/src/css/doc.css
+++ b/antora-ui-camel/src/css/doc.css
@@ -94,7 +94,7 @@
 }
 
 .doc .table-wrapper {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .doc .tableblock p {
